<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/LeftTextViewItemStyle"
            android:text="@string/richfit_barcodesystem_modular_creator" />

        <EditText
            android:id="@+id/et_creator"
            style="@style/RightEditTextItemStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/LeftTextViewItemStyle"
            android:text="@string/richfit_barcodesystem_modular_create_date_start" />

        <com.richfit.common_lib.widget.RichEditText
            android:id="@+id/et_date_start"
            style="@style/RightRichEditTextItemStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/LeftTextViewItemStyle"
            android:text="@string/richfit_barcodesystem_modular_create_date_end" />

        <com.richfit.common_lib.widget.RichEditText
            android:id="@+id/et_date_end"
            style="@style/RightRichEditTextItemStyle" />
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_start_search"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:text="@string/richfit_barcodesystem_modular_start_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:text="@string/richfit_barcodesystem_modular_cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>